# irre2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test_current_features.c  test_factorial.asm
binja/: __init__.py  __main__.py  cli.py  irre_arch.py  irre_decoder.py  irre_lifter.py  irre_object.py  irre_types.py  irre_view.py  plugin.json
doc/: arch.md  asm.md
sample/asm/: array_sum.asm  bit_count.asm  data_example.asm  hello.asm  loops.asm  math.asm  prime_check.asm  recursive_fib.asm  simple.asm
sample/c_test/: 01_simple.c  02_arithmetic.c  03_comparisons.c  04_bitwise.c  05_logical.c  06_unary.c  07_assignments.c  08_simple_math.c  09_if_else.c  09_simple_if.c  10_simple_while.c  10_while_loop.c  11_while_countdown.c  12_for_loop.c  13_do_while.c  14_do_while_once.c  15_control_flow_combined.c  16_address_of.c  17_dereference.c  18_pointer_arithmetic.c  18_simple_ptr_arith.c  19_ptr_arith_verify.c  20_simple_function.c  21_simple_global.c  22_debug_global.c  23_multiple_globals.c  24_simple_global_test.c  25_all_comparisons.c  26_ternary_test.c  27_comma_test.c  28_simple_return.c  29_simple_comma.c  30_global_arithmetic.c  31_just_global_load.c  32_increment_test.c  33_arrays_test.c  34_break_continue_test.c  35_string_literals_test.c  36_type_casting_test.c  CONTROL_FLOW_TESTS.md  (+1 more)
src/irre_asm/: CMakeLists.txt  main.cpp
src/irre_cc/: CMakeLists.txt  codegen.c  main.c  main_sample.cpp
src/irre_core/: CMakeLists.txt  encoding.hpp  instruction.hpp  irre.cpp  irre.hpp  semantics.hpp  util.hpp
src/irre_core/arch/: encoding.hpp  instruction.hpp  types.hpp
src/irre_core/assembler/: actions.cpp  actions.hpp  assembler.cpp  assembler.hpp  disassembler.cpp  disassembler.hpp  grammar.hpp  object.cpp  object.hpp  symbols.cpp  symbols.hpp
src/irre_core/emu/: devices.hpp  execution_visitor.hpp  memory.hpp  observer.hpp  state.hpp  trace_observer.hpp  vm.hpp
src/irre_disasm/: CMakeLists.txt  main.cpp
src/irre_emu/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_assembler.cpp  test_disassembler.cpp  test_emu.cpp  test_encoding.cpp  test_end_to_end.cpp  test_instruction.cpp  test_main.cpp
